make word changes across repo

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -160,21 +160,21 @@ Some basic words to get you started on sentence construction.
    <p>köto&emsp;<em>to say</em></p>
    <p>monodo&emsp;<em>to meet</em></p>
    <p>mokon&emsp;<em>to eat</em></p>
-   <p>vısun&emsp;<em>to know</em></p>
+   <p>fısun&emsp;<em>to know</em></p>
 </HisyeoTabs>
 
 #### Choose an object:
 <HisyeoTabs>
    <p>ulyö&emsp;<em>that</em></p>
    <p>küöxı&emsp;<em>fruit</em></p>
-   <p>pioli&emsp;<em>hello</em></p>
+   <p>bioli&emsp;<em>hello</em></p>
    <p>sütüö&emsp;<em>friend</em></p>
 </HisyeoTabs>
 
 #### Choose a sentence ender:
 <HisyeoTabs>
-   <p>lötven&emsp;<em>polite</em></p>
-   <p>voxo&emsp;<em>surprise</em></p>
+   <p>lötfen&emsp;<em>polite</em></p>
+   <p>foxo&emsp;<em>surprise</em></p>
    <p>ko&emsp;<em>question</em></p>
    <p>löicök&emsp;<em>confirmation</em></p>
    <p><em>or none</em></p>
@@ -184,7 +184,7 @@ Some basic words to get you started on sentence construction.
 
 <HisyeoTabs>
    <p>noyo mokon küöxı&emsp;<em>I eat fruit</em></p>
-   <p>nimü vısun sütüö noyo ko&emsp;<em>Do you know my friend?</em></p>
+   <p>nimü fısun sütüö noyo ko&emsp;<em>Do you know my friend?</em></p>
 </HisyeoTabs>
 
 ## Next Steps
