--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -82,12 +82,12 @@ wet so that you can begin your immersion training.
 The following are some of the current established expressions that Hisyëans use
 in day-to-day conversation:
 <HisyeoTabs>
-    <p>voxo.&emsp;<em>woah!</em></p>
+    <p>foxo.&emsp;<em>woah!</em></p>
     <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
-    <p>nimü pı zık.&emsp;<em>How are you doing?</em></p>
-    <p>noyo pı xön.&emsp;<em>I am good.</em></p>
-    <p>lono nimü lı si gö pı zık.&emsp;<em>How has your day been?</em></p>
-    <p>pı yök xön.&emsp;<em>Not good.</em></p>
+    <p>nimü bı zık.&emsp;<em>How are you doing?</em></p>
+    <p>noyo bı xön.&emsp;<em>I am good.</em></p>
+    <p>lono nimü lı si gö bı zık.&emsp;<em>How has your day been?</em></p>
+    <p>bı yök xön.&emsp;<em>Not good.</em></p>
     <p>zık lı yonlüs.&emsp;<em>What's wrong?</em></p>
     <p>lı yök sonkon&emsp;<em>It doesn't matter.</em></p>
     <p>küu yünlön noyo.&emsp;<em>Sorry!</em></p>
