--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -22,8 +22,8 @@ allows you to refer to the action of the verb as a noun.
 
 <HisyeoTabs>
     <p>.&emsp;<em></em>Playing on computers is awesome.</p>
-    <p>lı küzoü ü xe kelo vio öni tüek.&emsp;<em>It is awesome to play on computers.</em></p>
-    <p>noyo süko xe kelo vio öni tüek.&emsp;<em>I like playing on computers.</em></p>
+    <p>lı küzoü ü xe kelo fio öni tüek.&emsp;<em>It is awesome to play on computers.</em></p>
+    <p>noyo süko xe kelo fio öni tüek.&emsp;<em>I like playing on computers.</em></p>
 </HisyeoTabs>
 
 Starting the first sentence with a subordinate clause requires that you use a
@@ -55,8 +55,8 @@ subjective subordinate clause).
 
 <HisyeoTabs>
     <p>noyo monodo niün hoi suhot dus.&emsp;<em>I am meeting them at 10</em></p>
-    <p>nü küu monodo oxon cöüvon pıtün ci.&emsp;<em>Let's meet for supper, sound good?</em></p>
-    <p>nimü völun xe monodo noyo hoi cıhöü ko.&emsp;<em>Do you want to meet me later?</em></p>
+    <p>nü küu monodo oxon cöüfon bıtün ci.&emsp;<em>Let's meet for supper, sound good?</em></p>
+    <p>nimü fölun xe monodo noyo hoi cıhöü ko.&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
 
 ### How To Greet
@@ -70,7 +70,7 @@ to the action inside of the subjective subordinate clause.
 
 <HisyeoTabs>
     <p>lı xön ü xe monodo nimü löicök.&emsp;<em>It is so nice to meet you.</em></p>
-    <p>pı yüpik ü xe monodo nimü.&emsp;<em>Lovely to meet you.</em></p>
+    <p>bı yübik ü xe monodo nimü.&emsp;<em>Lovely to meet you.</em></p>
     <p>lı xön ëto ü xe dëko nimü.&emsp;<em>It is great to see you.</em></p>
 </HisyeoTabs>
 
@@ -78,7 +78,7 @@ to the action inside of the subjective subordinate clause.
 
 <HisyeoTabs>
     <p>lı konxo hön nimü.<em>Thank you.</em></p>
-    <p>lı konxo pı ëto löicök.&emsp;<em>Thank you so much.</em></p>
+    <p>lı konxo bı ëto löicök.&emsp;<em>Thank you so much.</em></p>
     <p>oxon noyo ütok.&emsp;<em>For me also.</em></p>
     <p>lı xön ü xe monodo nimü ütok.&emsp;<em>It is nice to meet you too.</em></p>
 </HisyeoTabs>
@@ -86,11 +86,11 @@ to the action inside of the subjective subordinate clause.
 ### When You'll Meet Again
 
 <HisyeoTabs>
-    <p>nü küu monodo pı dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
-    <p>hoi woküt zık ü noyo köi dëko nimü pı dizel.&emsp;<em>When can I see you again?</em></p>
-    <p>nü köi döstoc iskö hoi pıtün yë lono unbol ci.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
-    <p>nimü lı völni hoi suhot tukwos yë pıtün öfo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
-    <p>noyo xiwon xe dëko nimü pı zelen ëto löicök.&emsp;<em>I so hope to see you very soon!</em></p>
+    <p>nü küu monodo bı dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
+    <p>hoi woküt zık ü noyo köi dëko nimü bı dizel.&emsp;<em>When can I see you again?</em></p>
+    <p>nü köi döstoc iskö hoi bıtün yë lono unbol ci.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
+    <p>nimü lı fölni hoi suhot tukwos yë bıtün öfo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
+    <p>noyo xiwon xe dëko nimü bı zelen ëto löicök.&emsp;<em>I so hope to see you very soon!</em></p>
 </HisyeoTabs>
 
 ## Introductions
