--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -23,7 +23,7 @@ To express your internet usage or uber cost, we need quantifiers that will tell
 us exactly how many of something we have. The table below provides the numbers
 that you'll need to count all the way up to a trillion.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
     <table>
       <thead>
@@ -42,7 +42,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>9</td><td><HisyeoText kind='latin'>eson</HisyeoText></td></tr>
         <tr><td>10</td><td><HisyeoText kind='latin'>dus</HisyeoText></td></tr>
         <tr><td>11</td><td><HisyeoText kind='latin'>önsu</HisyeoText></td></tr>
-        <tr><td>12</td><td><HisyeoText kind='latin'>pole</HisyeoText></td></tr>
+        <tr><td>12</td><td><HisyeoText kind='latin'>bole</HisyeoText></td></tr>
         <tr><td>13</td><td><HisyeoText kind='latin'>telö</HisyeoText></td></tr>
         <tr><td>14</td><td><HisyeoText kind='latin'>zıyön</HisyeoText></td></tr>
         <tr><td>15</td><td><HisyeoText kind='latin'>kinsë</HisyeoText></td></tr>
@@ -76,13 +76,13 @@ that you'll need to count all the way up to a trillion.
         <tr><td>70</td><td><HisyeoText kind='latin'>xëti dus</HisyeoText></td></tr>
         <tr><td>80</td><td><HisyeoText kind='latin'>tukwos dus</HisyeoText></td></tr>
         <tr><td>90</td><td><HisyeoText kind='latin'>eson dus</HisyeoText></td></tr>
-        <tr><td>100</td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
-        <tr><td>101</td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
-        <tr><td>234</td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
+        <tr><td>100</td><td><HisyeoText kind='latin'>fiyën</HisyeoText></td></tr>
+        <tr><td>101</td><td><HisyeoText kind='latin'>fiyën kut</HisyeoText></td></tr>
+        <tr><td>234</td><td><HisyeoText kind='latin'>düi fiyën son dus nonkü</HisyeoText></td></tr>
         <tr><td>1000</td><td><HisyeoText kind='latin'>elfü kut</HisyeoText></td></tr>
         <tr><td>1,000,000</td><td><HisyeoText kind='latin'>elfü düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='latin'>elfü kut,eson viyën eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elfü düi, düi viyën son dus nonkü elfü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='latin'>elfü kut,eson fiyën eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elfü düi, düi fiyën son dus nonkü elfü kut, tiü fiyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -107,7 +107,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>9</td><td><HisyeoText kind='abugida'>eson</HisyeoText></td></tr>
         <tr><td>10</td><td><HisyeoText kind='abugida'>dus</HisyeoText></td></tr>
         <tr><td>11</td><td><HisyeoText kind='abugida'>önsu</HisyeoText></td></tr>
-        <tr><td>12</td><td><HisyeoText kind='abugida'>pole</HisyeoText></td></tr>
+        <tr><td>12</td><td><HisyeoText kind='abugida'>bole</HisyeoText></td></tr>
         <tr><td>13</td><td><HisyeoText kind='abugida'>telö</HisyeoText></td></tr>
         <tr><td>14</td><td><HisyeoText kind='abugida'>zıyön</HisyeoText></td></tr>
         <tr><td>15</td><td><HisyeoText kind='abugida'>kinsë</HisyeoText></td></tr>
@@ -141,13 +141,13 @@ that you'll need to count all the way up to a trillion.
         <tr><td>70</td><td><HisyeoText kind='abugida'>xëti dus</HisyeoText></td></tr>
         <tr><td>80</td><td><HisyeoText kind='abugida'>tukwos dus</HisyeoText></td></tr>
         <tr><td>90</td><td><HisyeoText kind='abugida'>eson dus</HisyeoText></td></tr>
-        <tr><td>100</td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
-        <tr><td>101</td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
-        <tr><td>234</td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
+        <tr><td>100</td><td><HisyeoText kind='abugida'>fiyën</HisyeoText></td></tr>
+        <tr><td>101</td><td><HisyeoText kind='abugida'>fiyën kut</HisyeoText></td></tr>
+        <tr><td>234</td><td><HisyeoText kind='abugida'>düi fiyën son dus nonkü</HisyeoText></td></tr>
         <tr><td>1000</td><td><HisyeoText kind='abugida'>elfü kut</HisyeoText></td></tr>
         <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>elfü düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='abugida'>elfü kut,eson viyën eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elfü düi, düi viyën son dus nonkü elfü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='abugida'>elfü kut,eson fiyën eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elfü düi, düi fiyën son dus nonkü elfü kut, tiü fiyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -167,7 +167,7 @@ These are called **Cardinal Numbers**. You can supply any amount of number words
 here and they follow the rules shown above to generate their value or amount.
 
 <HisyeoTabs>
-  <p>düi viyën son höfezi "two hundred and three cows"</p>
+  <p>düi fiyën son höfezi "two hundred and three cows"</p>
 </HisyeoTabs>
 
 If you specify only the number 1 (kut), it acts like the indefinite article
@@ -192,7 +192,7 @@ Besides <HisyeoWord is='kut'/> for singular, these are the words used for
 plurality
 
 <HisyeoTabs>
-  <p>püzök&emsp;<em>lack</em> <span>➖☹️</span></p>
+  <p>büzök&emsp;<em>lack</em> <span>➖☹️</span></p>
   <p>mënüs&emsp;<em>fewer/less</em> <span>➖➖</span></p>
   <p>yoüti&emsp;<em>some/few</em> <span>➖</span></p>
   <p>zötëstö&emsp;<em>sufficient/enough</em> <span>🙂</span></p>
@@ -213,7 +213,7 @@ known as the *placement*. These are called **Ordinal Numbers**.
 | Zeroth     | <HisyeoText kind='latin'>xünyu</HisyeoText>      | <HisyeoText kind='abugida'>xünyu</HisyeoText>    |
 | First      | <HisyeoText kind='latin'>kut</HisyeoText>        | <HisyeoText kind='abugida'>kut</HisyeoText>      |
 | Second     | <HisyeoText kind='latin'>düi</HisyeoText>        | <HisyeoText kind='abugida'>düi</HisyeoText>    |
-| Twelfth    | <HisyeoText kind='latin'>pole</HisyeoText>       | <HisyeoText kind='abugida'>pole</HisyeoText>     |
+| Twelfth    | <HisyeoText kind='latin'>bole</HisyeoText>       | <HisyeoText kind='abugida'>bole</HisyeoText>     |
 | Eighteenth | <HisyeoText kind='latin'>dus tukwos</HisyeoText> | <HisyeoText kind='abugida'>dus tukwos</HisyeoText>  |
 | Twentieth  | <HisyeoText kind='latin'>düi dus</HisyeoText>    | <HisyeoText kind='abugida'>düi dus</HisyeoText> |
 
@@ -259,7 +259,7 @@ In order to indicate a specific day use one of the demonstrative pronouns
 can use a day as a condition in a hön prepositional phrase:
 
 <HisyeoTabs>
-  <p>hön xokön lono xolxili, ü nü lı si lö pı xopëk müt motüo sënzö</p>
+  <p>hön xokön lono xolxili, ü nü lı si lö bı xobëk müt motüo sënzö</p>
   <em>"Every Sunday, we used to go to grandpa's"</em>
 </HisyeoTabs>
 
@@ -287,7 +287,7 @@ ordinal numbers that were shown above.
 | September | <HisyeoText kind='latin'>wuto eson</HisyeoText>   | <HisyeoText kind='abugida'>wuto eson</HisyeoText>   |
 | October   | <HisyeoText kind='latin'>wuto dus</HisyeoText>    | <HisyeoText kind='abugida'>wuto dus</HisyeoText>    |
 | November  | <HisyeoText kind='latin'>wuto önsu</HisyeoText>   | <HisyeoText kind='abugida'>wuto önsu</HisyeoText>   |
-| December  | <HisyeoText kind='latin'>wuto pole</HisyeoText>   | <HisyeoText kind='abugida'>wuto pole</HisyeoText>   |
+| December  | <HisyeoText kind='latin'>wuto bole</HisyeoText>   | <HisyeoText kind='abugida'>wuto bole</HisyeoText>   |
 
 To remember which months have 31, 30, and 28 days, try using this children's
 rhyme:
@@ -320,7 +320,7 @@ also got ways to describe the seasons in equatorial regions too.
 | Summer      | <HisyeoText kind='latin'>yogö üsën tüt</HisyeoText>        | <HisyeoText kind='abugida'>yogö üsën tüt</HisyeoText>        |
 | Autumn/Fall | <HisyeoText kind='latin'>yogö üsën kon kudüdo</HisyeoText> | <HisyeoText kind='abugida'>yogö üsën kon kudüdo</HisyeoText> |
 | Winter      | <HisyeoText kind='latin'>yogö üsën cunyü</HisyeoText>      | <HisyeoText kind='abugida'>yogö üsën cunyü</HisyeoText>      |
-| Wet         | <HisyeoText kind='latin'>yogö üsën nupuso</HisyeoText>     | <HisyeoText kind='abugida'>yogö üsën nupuso</HisyeoText>     |
+| Wet         | <HisyeoText kind='latin'>yogö üsën nubuso</HisyeoText>     | <HisyeoText kind='abugida'>yogö üsën nubuso</HisyeoText>     |
 | Dry         | <HisyeoText kind='latin'>yogö üsën ülgükin</HisyeoText>    | <HisyeoText kind='abugida'>yogö üsën ülgükin</HisyeoText>    |
 
 To say something is "in the summer" or similar, supply one of these as the
@@ -374,7 +374,7 @@ to return to the main sentence clause for the remaining consituents.
 
 :::info Conversation Practice
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
       <dl>
         <dt>Malina</dt>
@@ -451,9 +451,9 @@ of how to respond to these questions:
   <p>lı kut&emsp;<em>"It is one"</em></p>
   <p>lı suhot kut&emsp;<em>"It is one o'clock"</em></p>
   <p>lı suhot dus&emsp;<em>"It is ten o'clock"</em></p>
-  <p>lı suhot pole&emsp;<em>"It is twelve o'clock"</em></p>
+  <p>lı suhot bole&emsp;<em>"It is twelve o'clock"</em></p>
   <p>lı lono mutyu&emsp;<em>"It is noon"</em></p>
-  <p>lı pıtün mutyu&emsp;<em>"It is midnight"</em></p>
+  <p>lı bıtün mutyu&emsp;<em>"It is midnight"</em></p>
 </HisyeoTabs>
 
 Hisyëö uses the 12-hour clock to reduce the need for multiple word ordinals to
@@ -469,9 +469,9 @@ For some specific times with importance, here's how to translate:
 
 <HisyeoTabs>
   <p>woküt kon socok lono&emsp;<em>"morning time"</em></p>
-  <p>woküt yë cöüvon kut&emsp;<em>"breakfast time"</em></p>
-  <p>woküt yë cöüvon mutyu&emsp;<em>"lunch time"</em></p>
-  <p>woküt yë cöüvon vëlcin&emsp;<em>"dinner time"</em></p>
+  <p>woküt yë cöüfon kut&emsp;<em>"breakfast time"</em></p>
+  <p>woküt yë cöüfon mutyu&emsp;<em>"lunch time"</em></p>
+  <p>woküt yë cöüfon fëlcin&emsp;<em>"dinner time"</em></p>
   <p>woküt yë küon nëös&emsp;<em>"dawn"</em></p>
   <p>woküt yë küon könyëc&emsp;<em>"dusk"</em></p>
   <p>woküt kon conzodo&emsp;<em>"bedtime"</em></p>
@@ -482,7 +482,7 @@ In order to give any sentence a time that it occurred, we use the hoi
 preposition.
 
 <HisyeoTabs>
-  <p>cöüvon kut lı könyëc hoi tukwos&emsp;<em>"Breakfast is ending at 8"</em></p>
+  <p>cöüfon kut lı könyëc hoi tukwos&emsp;<em>"Breakfast is ending at 8"</em></p>
 </HisyeoTabs>
 
 ### Durations
@@ -493,7 +493,7 @@ determiner slot (left side of the head word).
 
 <HisyeoTabs>
   <p>nimü yünyoü son suhot&emsp;<em>"You have three hours"</em></p>
-  <p>tüu ulyö puswen kut suhot&emsp;<em>"That task needs an hour"</em></p>
+  <p>tüu ulyö buswen kut suhot&emsp;<em>"That task needs an hour"</em></p>
 </HisyeoTabs>
 
 Most of the time when we are referring to time, we think of it as a specific
@@ -512,7 +512,7 @@ If you need to talk about specific times within an hour, there is a base
 modifier content word that does double duty as a time unit for minutes.
 
 <HisyeoTabs>
-  <p>ke lı gö pı tölki lon tiü ëfun&emsp;<em>"It will only be 5 minutes"</em></p>
+  <p>ke lı gö bı tölki lon tiü ëfun&emsp;<em>"It will only be 5 minutes"</em></p>
 </HisyeoTabs>
 
 ## Measurements
@@ -526,8 +526,8 @@ clarity, let's use the agentive verb noun particle to create a meaning of
 "one-er" or something whose state is primarily about oneness.
 
 <HisyeoTabs>
-  <p>hondon lı öni kut sokovü yë di volo möi et yë zomi.&emsp;<em>"The family is the most basic unit of society."</em></p>
-  <p>küngiyo ondo xe lı ëo vunlit ölë cızi müt düi yodo son öni kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
+  <p>hondon lı öni kut sokofü yë di folo möi et yë zomi.&emsp;<em>"The family is the most basic unit of society."</em></p>
+  <p>küngiyo ondo xe lı ëo funlit ölë cızi müt düi yodo son öni kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
 </HisyeoTabs>
 
 Other than the time words, the rest of the measurement units are done by just
@@ -536,13 +536,13 @@ referring to what kind of measurement the unit is for.
 ### Temperature
 
 <HisyeoTabs>
-  <p>ximu di vıldonpun hoi kut viyën cëö yë tüt.&emsp;<em>"Water boils at 100 degrees Celsius."</em></p>
+  <p>ximu di  hoi kut fiyën cëö yë tüt.&emsp;<em>"Water boils at 100 degrees Celsius."</em></p>
 </HisyeoTabs>
 
 Since "Celcius" and "Fahrenheit" are names, you can use these if needed. The
 proper spellings would be:
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <ul>
           <li><HisyeoText kind='latin'>cëö Velunhoıt</HisyeoText></li>
@@ -559,7 +559,7 @@ proper spellings would be:
 
 ### Mass/Volume/Weight
 
-A unit of mass is 1 gram. Add <HisyeoWord is='cënpö'/> for kilograms or <HisyeoWord is='cüti'/> for
+A unit of mass is 1 gram. Add <HisyeoWord is='cënbö'/> for kilograms or <HisyeoWord is='cüti'/> for
 milligrams.
 
 > It is widely recommended that adults consume 15-35 grams of fiber daily, although many Americans fall short.
@@ -567,12 +567,12 @@ milligrams.
 > —Casey Seiden, Verywell Health, 3 May 2024
 
 <HisyeoTabs>
-  <p>pı nulto pësnëhot vos umo dës xonluk mokon zöhün doi gıtno dus tiü ün son dus tiü öni kut yë küsowi hoi xokön lono lëkın mikdol yë ëto umo Umelıkın lı püzök onö</p>
+  <p>bı nulto bësnëhot fos umo dës xonluk mokon zöhün doi gıtno dus tiü ün son dus tiü öni kut yë küsowi hoi xokön lono lëkın mikdol yë ëto umo Umelıkın lı büzök onö</p>
 </HisyeoTabs>
 
 ### Length/Width/Height
 
-A unit of length is 1 meter. <HisyeoWord is='cënpö'/> for kilometers or <HisyeoWord is='cüti'/> for
+A unit of length is 1 meter. <HisyeoWord is='cënbö'/> for kilometers or <HisyeoWord is='cüti'/> for
 millimeters.
 
 > In computer simulations, their average charge was strong enough to lift 100 pollen grains at least six millimeters in less than a second.
@@ -580,7 +580,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon xe ëo lö pı mulö ölë viyën volo zënsi inboli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
+  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon xe ëo lö bı mulö ölë fiyën folo zënsi inboli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
