--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -27,7 +27,7 @@ You can provide numerals as determiners and they allow you to specify the
 plurality or quantity of the nouns being referred to. Larger numbers are created
 by using the below method of assembling parts of a number:
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
     <table>
         <tr><td><strong>Number</strong></td><td><strong>Hisyëö</strong></td></tr>
@@ -43,7 +43,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>9</p></td><td><HisyeoText kind='latin'>eson</HisyeoText></td></tr>
         <tr><td><p>10</p></td><td><HisyeoText kind='latin'>dus</HisyeoText></td></tr>
         <tr><td><p>11</p></td><td><HisyeoText kind='latin'>önsu</HisyeoText></td></tr>
-        <tr><td><p>12</p></td><td><HisyeoText kind='latin'>pole</HisyeoText></td></tr>
+        <tr><td><p>12</p></td><td><HisyeoText kind='latin'>bole</HisyeoText></td></tr>
         <tr><td><p>13</p></td><td><HisyeoText kind='latin'>telö</HisyeoText></td></tr>
         <tr><td><p>14</p></td><td><HisyeoText kind='latin'>zıyön</HisyeoText></td></tr>
         <tr><td><p>15</p></td><td><HisyeoText kind='latin'>kinsë</HisyeoText></td></tr>
@@ -55,12 +55,12 @@ by using the below method of assembling parts of a number:
         <tr><td><p>21</p></td><td><HisyeoText kind='latin'>düi dus kut</HisyeoText></td></tr>
         <tr><td><p>22</p></td><td><HisyeoText kind='latin'>düi dus düi</HisyeoText></td></tr>
         <tr><td><p>23</p></td><td><HisyeoText kind='latin'>düi dus son</HisyeoText></td></tr>
-        <tr><td><p>100</p></td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
-        <tr><td><p>101</p></td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
-        <tr><td><p>234</p></td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
+        <tr><td><p>100</p></td><td><HisyeoText kind='latin'>fiyën</HisyeoText></td></tr>
+        <tr><td><p>101</p></td><td><HisyeoText kind='latin'>fiyën kut</HisyeoText></td></tr>
+        <tr><td><p>234</p></td><td><HisyeoText kind='latin'>düi fiyën son dus nonkü</HisyeoText></td></tr>
         <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>elfü kut</HisyeoText></td></tr>
         <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>elfü düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elfü kut, eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elfü kut, eson fiyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
@@ -78,7 +78,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>9</p></td><td><HisyeoText kind='abugida'>eson</HisyeoText></td></tr>
         <tr><td><p>10</p></td><td><HisyeoText kind='abugida'>dus</HisyeoText></td></tr>
         <tr><td><p>11</p></td><td><HisyeoText kind='abugida'>önsu</HisyeoText></td></tr>
-        <tr><td><p>12</p></td><td><HisyeoText kind='abugida'>pole</HisyeoText></td></tr>
+        <tr><td><p>12</p></td><td><HisyeoText kind='abugida'>bole</HisyeoText></td></tr>
         <tr><td><p>13</p></td><td><HisyeoText kind='abugida'>telö</HisyeoText></td></tr>
         <tr><td><p>14</p></td><td><HisyeoText kind='abugida'>zıyön</HisyeoText></td></tr>
         <tr><td><p>15</p></td><td><HisyeoText kind='abugida'>kinsë</HisyeoText></td></tr>
@@ -90,12 +90,12 @@ by using the below method of assembling parts of a number:
         <tr><td><p>21</p></td><td><HisyeoText kind='abugida'>düi dus kut</HisyeoText></td></tr>
         <tr><td><p>22</p></td><td><HisyeoText kind='abugida'>düi dus düi</HisyeoText></td></tr>
         <tr><td><p>23</p></td><td><HisyeoText kind='abugida'>düi dus son</HisyeoText></td></tr>
-        <tr><td><p>100</p></td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
-        <tr><td><p>101</p></td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
-        <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
+        <tr><td><p>100</p></td><td><HisyeoText kind='abugida'>fiyën</HisyeoText></td></tr>
+        <tr><td><p>101</p></td><td><HisyeoText kind='abugida'>fiyën kut</HisyeoText></td></tr>
+        <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>düi fiyën son dus nonkü</HisyeoText></td></tr>
         <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>elfü kut</HisyeoText></td></tr>
         <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>elfü düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>elfü kut, eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>elfü kut, eson fiyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
 </Tabs>
@@ -105,7 +105,7 @@ cardinal number).
 
 <HisyeoTabs>
   <p>son sütüö lı cok sün zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nü puswen son dus tiü ëfun oxon xe piek nı süwit öfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>nü buswen son dus tiü ëfun oxon xe biek nı süwit öfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -127,8 +127,8 @@ Place a numeral word after (<HisyeoWord is='öni'/>) and use this as a modifier 
 represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
-  <p>poholon yünyoü zınkon öni düi.&emsp;<em>"The closet has double doors."</em></p>
-  <p>niün lı kiösö ëto köi tüu zoston öni nonkü pı obunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
+  <p>boholon yünyoü zınkon öni düi.&emsp;<em>"The closet has double doors."</em></p>
+  <p>niün lı kiösö ëto köi tüu zoston öni nonkü bı obunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
 </HisyeoTabs>
 
 ### Adverbial
@@ -136,8 +136,8 @@ represent the number of times something is to be multiplied.
 Use the same form as above but with the manner marker to get adverbial numerals.
 
 <HisyeoTabs>
-  <p>noyo pı öni kut tölki mokon si piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
-  <p>nimü pı öni düi küu yön sikot hoköli hön lono xokön.&emsp;<em>You should use your toothbrush twice a day.</em></p>
+  <p>noyo bı öni kut tölki mokon si biek botuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
+  <p>nimü bı öni düi küu yön sikot hoköli hön lono xokön.&emsp;<em>You should use your toothbrush twice a day.</em></p>
 </HisyeoTabs>
 
 ### Distributive
@@ -148,16 +148,16 @@ details, you would tack on a <HisyeoWord is='xokön'/> at the end of a noun
 phrase. Here's a non-distributive action and contrasting distributive one:
 
 <HisyeoTabs>
-  <p>umo Tom ü umo Zıl oköt son dıpo.&emsp;<em>"Tom and Jill carried three boxes."</em></p>
-  <p>umo Tom ü umo Zıl oköt son dıpo xokön.&emsp;<em>"Tom and Jill carried three boxes each."</em></p>
+  <p>umo Tom ü umo Zıl oköt son dıbo.&emsp;<em>"Tom and Jill carried three boxes."</em></p>
+  <p>umo Tom ü umo Zıl oköt son dıbo xokön.&emsp;<em>"Tom and Jill carried three boxes each."</em></p>
 </HisyeoTabs>
 
 In order to specify that something is double the degree of the associated
 noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 
 <HisyeoTabs>
-    <p>motüo wohi noyo pı xokön düi diyondë hön xe pı elentët lı ëo ınfultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
-    <p>lı sonkon ü xe pesol zınkon, ün pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
+    <p>motüo wohi noyo bı xokön düi diyondë hön xe bı elentët lı ëo ınfultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
+    <p>lı sonkon ü xe besol zınkon, ün bı xokön son hön bıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
     <p>lolü nimü oncëmon ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
 </HisyeoTabs>
 
@@ -174,18 +174,18 @@ exact numerical quantity the noun actually is.
 <HisyeoTabs>
   <p><strong>total/all:</strong>&emsp;möi sütüö noyo süko kontol doi osyen.&emsp;<em>All my friends like classical music</em></p>
   <p><strong>highest/most:</strong>&emsp;öfo lı numüno yë eswen sonkon en möi.&emsp;<em>This is the most important example.</em></p>
-  <p><strong>high/many:</strong>&emsp;lı ëto toliko pësu yë xe cöüvon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
-  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu öfo, en vos noyo köi tüek vio kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
-  <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi öfo pı ibüdü.&emsp;<em>"There are less people here now."</em></p>
+  <p><strong>high/many:</strong>&emsp;lı ëto toliko bësu yë xe cöüfon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
+  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu öfo, en fos noyo köi tüek fio kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
+  <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi öfo bı ibüdü.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoüti umo süko kon mühoyon.&emsp;<em>"Some people like camping."</em></p>
-  <p><strong>lowest/least:</strong>&emsp;noyo pı tölki yünyoü zötëstö oxon xe cıvü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
+  <p><strong>lowest/least:</strong>&emsp;noyo bı tölki yünyoü zötëstö oxon xe cıfü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xünyu yë düi umo lı sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
 There's also the universal classifications of "every" and "each". These allow
 for more specific and complex logical statements.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <ul>
           <li><strong></strong>: </li>
@@ -208,7 +208,7 @@ for more specific and complex logical statements.
 Then there is the relative quantities about position in a sequence. Whether that
 sequence be positional or time.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <ul>
           <li><strong></strong>: </li>
@@ -230,7 +230,7 @@ sequence be positional or time.
 Lastly, there are relative quantities that refer to the speakers feelings that
 the quantity is an adequate amount for their purposes.
 
-<Tabs groupId="popöun-kon-cukto" queryString>
+<Tabs groupId="boböun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <ul>
           <li><strong></strong>: </li>
