--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -49,7 +49,7 @@ Converting from the other content types into modifiers.
 When a noun acts as a modifier, it means that the head word is somehow related
 to the noun (acting as a modifer) or shares some recognizable quality with the
 noun. Like the affix "-like" in English. One way of making a modifier out of a
-noun is to provide it as a word immediately following <HisyeoWord is="vın"/>.
+noun is to provide it as a word immediately following <HisyeoWord is="fın"/>.
 This has the effect of meaning "[noun]-like thing" in English. You can use it
 following any head noun or existing modifier chain.
 
@@ -68,10 +68,10 @@ You can modify a preceding verb or noun phrase by using one of the relative
 clause particles:
 <HisyeoTabs>
     <p>xe - <em>Use this one when the subject is shared from the outer sentence</em></p>
-    <p>vos - <em>Use this one when the subject is changed from the outer sentence</em></p>
+    <p>fos - <em>Use this one when the subject is changed from the outer sentence</em></p>
 </HisyeoTabs>
 
-When you use the second form (<HisyeoWord is="vos"/>), you must provide at least
+When you use the second form (<HisyeoWord is="fos"/>), you must provide at least
 one constituent that refers to the verb or noun phrase, this is called the
 **resumptive phrase**. Hisyëö uses the demonstratives as resumptive pronouns
 within resumptive phrases. Use the proximal demonstrative
@@ -84,8 +84,8 @@ party.
 
 <HisyeoTabs>
     <p>umo wohi xe nıwos hoi zınkon uklo, wëloi hoi sëdu muni.&emsp;<em>"The woman who lives next door works in a bank."</em></p>
-    <p>öfo lı non vos noyo völun xe möniso öfo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
-    <p>lı yöüli ëto ü umo vos niün pı ılık köto onö.&emsp;<em>"The person they spoke to was really helpful."</em></p>
+    <p>öfo lı non fos noyo fölun xe möniso öfo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
+    <p>lı yöüli ëto ü umo fos niün bı ılık köto onö.&emsp;<em>"The person they spoke to was really helpful."</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
