--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -50,8 +50,8 @@ are usually considered to be imperfective and not perfect (since there is a
 particle that can specify that the action is perfect).
 
 <HisyeoTabs>
-    <p>hoi woküt zık ü nü mokon hoi pıtün cokyen öfo.&emsp;<em>What time are we eating this evening?</em></p>
-    <p>vonolon lunsol ibüwë müt noyo.&emsp;<em>The monkey is throwing rocks at me.</em></p>
+    <p>hoi woküt zık ü nü mokon hoi bıtün cokyen öfo.&emsp;<em>What time are we eating this evening?</em></p>
+    <p>fonolon lunsol ibüwë müt noyo.&emsp;<em>The monkey is throwing rocks at me.</em></p>
 </HisyeoTabs>
 
 ### Irrealis
@@ -72,36 +72,36 @@ that the subject was definitely capable of completing the action. When used to
 frame the predicate of a question, it has the effect of asking for permission.
 
 <HisyeoTabs>
-    <p>hoi ılık vos noyo lı dës dëko, ü noyo köi dëko pı xön ëto.&emsp;<em>Before I was blind, I could see very well.</em></p>
-    <p>noyo goniso vos niün köi tüu nı hön vos niün völun pı hokiki.&emsp;<em>I think he could do it if he really wanted to.</em></p>
+    <p>hoi ılık fos noyo lı dës dëko, ü noyo köi dëko bı xön ëto.&emsp;<em>Before I was blind, I could see very well.</em></p>
+    <p>noyo goniso fos niün köi tüu nı hön fos niün fölun bı hokiki.&emsp;<em>I think he could do it if he really wanted to.</em></p>
     <p>noyo xiwon xe köi lı xikö ze.&emsp;<em>I wish I could fly!</em></p>
-    <p>noyo köi yön öntön tetëk mulö pı ilxizuk ko.&emsp;<em>Could I borrow your coat?</em></p>
+    <p>noyo köi yön öntön tetëk mulö bı ilxizuk ko.&emsp;<em>Could I borrow your coat?</em></p>
     <p>noyo köi sıtyo hoı ulyö ko.&emsp;<em>May I sit there?</em></p>
-    <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci.&emsp;<em>Schrödinger's cat may or may not be in the box</em></p>
-    <p>nimü köi köto si pı sëlöhö yë pökpün&emsp;<em>You might have warned me about the thunderstorm.</em></p>
-    <p>noyo köi lı lö müt köndodü onö lëkın noyo göcidon si yök pı öhël.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
-    <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı möcipo völun vos wëilun müt noyo mıslı umo wohi.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
-    <p>noyo köi gomi piek potuk süwit vëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
-    <p>nü köi puswen vın xe lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıbo dinci.&emsp;<em>Schrödinger's cat may or may not be in the box</em></p>
+    <p>nimü köi köto si bı sëlöhö yë bökbün&emsp;<em>You might have warned me about the thunderstorm.</em></p>
+    <p>noyo köi lı lö müt köndodü onö lëkın noyo göcidon si yök bı öhël.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
+    <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo bı möcibo fölun fos wëilun müt noyo mıslı umo wohi.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
+    <p>noyo köi gomi biek botuk süwit fëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
+    <p>nü köi buswen fın xe lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nimü köi tenkin ulyö ko.&emsp;<em>Can you hear that?</em></p>
-    <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, ün Döic.&emsp;<em>She can speak English, French, and German.</em></p>
+    <p>niün köi köto fio hiskünco Ingulıc, Vulonsë, ün Döic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
 
 #### Conditional (*what would be*)
 
-The conditional verb marker (<HisyeoWord is='pit'/>) indicates that the
+The conditional verb marker (<HisyeoWord is='bit'/>) indicates that the
 predicate occurring is dependent on some other circumstance that is either
 explicitly described or implied.
 
 <HisyeoTabs>
-    <p>hoi lono kut yë poxö kon pëüdo ü noyo monodo umo wohi xe pit di hünsüon noyo.&emsp;<em>On my first day at University, I met the woman who would become my wife.</em></p>
-    <p>hön vos noyo lı pilüs hoi xe köntësto oxon yoküntik, ü noyo pit cüdo vun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
-    <p>noyo pit yüpik xe lı lö monodo.&emsp;<em>I would love to come and visit.</em></p>
-    <p>küu dëko piek süwit yë sopölë xön ëto ze. noyo pit mokon möi ulyö pı mülü ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
-    <p>noyo müt nimü pit sölü xe sityo pı koli.&emsp;<em>I would ask you all to sit down.</em></p>
-    <p>noyo müt goniso vos niün lı si cok pı ılık.&emsp;<em>I would imagine that they have already left.</em></p>
-    <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si xe pesol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
-    <p>niün pit lı gö hoi sınsi Lundun pı ibüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
+    <p>hoi lono kut yë boxö kon bëüdo ü noyo monodo umo wohi xe bit di hünsüon noyo.&emsp;<em>On my first day at University, I met the woman who would become my wife.</em></p>
+    <p>hön fos noyo lı bilüs hoi xe köntësto oxon yoküntik, ü noyo bit cüdo fun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
+    <p>noyo bit yübik xe lı lö monodo.&emsp;<em>I would love to come and visit.</em></p>
+    <p>küu dëko biek süwit yë sobölë xön ëto ze. noyo bit mokon möi ulyö bı mülü ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
+    <p>noyo müt nimü bit sölü xe sityo bı koli.&emsp;<em>I would ask you all to sit down.</em></p>
+    <p>noyo müt goniso fos niün lı si cok bı ılık.&emsp;<em>I would imagine that they have already left.</em></p>
+    <p>niün lı köxentë yë mefüs oxon fos niün bit bunyentoc si xe besol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
+    <p>niün bit lı gö hoi sınsi Lundun bı ibüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
 </HisyeoTabs>
 
 :::info The different conditional classifications of English
@@ -118,8 +118,8 @@ differentiation of syntax occurs in Hisyëö.
   or the time marker (<HisyeoWord is='hoi'/>) to indicate the condition.
 
 <HisyeoTabs>
-    <p>hön vos gongoxi öitun, lı mötö hoi poxö yë limien ilë.&emsp;<em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
-    <p>hön vos nimü lı ëo voüt, umo vısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone lets you know.</em></p>
+    <p>hön fos gongoxi öitun, lı mötö hoi boxö yë limien ilë.&emsp;<em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
+    <p>hön fos nimü lı ëo foüt, umo fısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone lets you know.</em></p>
 </HisyeoTabs>
 
 - **First conditional**: These conditionals are sentences thot regard the
@@ -131,10 +131,10 @@ differentiation of syntax occurs in Hisyëö.
   is='si'/>) or an imperative (<HisyeoWord is='küu'/>) on the consequence.
 
 <HisyeoTabs>
-    <p>hön vos niün sölü müt noyo, noyo ke vohoso pësnëhot niün pı diyondë ëto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
-    <p>hön vos nimü lı ëo voüt, umo ke vısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
-    <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt poxö noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
-    <p>hön vos nimü lı cok ibüdü, nimü ke monodo&emsp;<em>If you leave now, you will still catch your train.</em></p>
+    <p>hön fos niün sölü müt noyo, noyo ke fohoso bësnëhot niün bı diyondë ëto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
+    <p>hön fos nimü lı ëo foüt, umo ke fısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
+    <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt boxö noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
+    <p>hön fos nimü lı cok ibüdü, nimü ke monodo&emsp;<em>If you leave now, you will still catch your train.</em></p>
 </HisyeoTabs>
 
 - **Second conditional**: These conditionals are sentences used to describe
@@ -142,9 +142,9 @@ differentiation of syntax occurs in Hisyëö.
   **future** tense.
 
 <HisyeoTabs>
-    <p>hön vos noyo süko köndodü, ü noyo pit lı gö hoi eswen niün.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
-    <p>hön vos lı hüzon hoi lono uklo, ü umo pit lı cıvulo hoi titon.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
-    <p>hön vos nimü lı cok pı ibüdü, ü nimü pı gufıs pit doicël oütö kiskö nimü.&emsp;<em>If you left now, you would still catch your train.</em></p>
+    <p>hön fos noyo süko köndodü, ü noyo bit lı gö hoi eswen niün.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
+    <p>hön fos lı hüzon hoi lono uklo, ü umo bit lı cıfulo hoi titon.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
+    <p>hön fos nimü lı cok bı ibüdü, ü nimü bı gufıs bit doicël oütö kiskö nimü.&emsp;<em>If you left now, you would still catch your train.</em></p>
 </HisyeoTabs>
 
 - **Third conditional**: These conditionals are sentences used to describe
@@ -153,8 +153,8 @@ differentiation of syntax occurs in Hisyëö.
   conditional perfect.
 
 <HisyeoTabs>
-    <p>hön vos nimü xokülü si noyo, ü noyo pit lı si lö.&emsp;<em>If you had called me, I would have come.</em></p>
-    <p>niün pit lı si pilüs hön vos noyo lı si yöüli müt niün.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
+    <p>hön fos nimü xokülü si noyo, ü noyo bit lı si lö.&emsp;<em>If you had called me, I would have come.</em></p>
+    <p>niün bit lı si bilüs hön fos noyo lı si yöüli müt niün.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
 </HisyeoTabs>
 
 - **Mixed conditional**: These conditionals are a mixture of the second and
@@ -169,9 +169,9 @@ differentiation of syntax occurs in Hisyëö.
   conditional).
 
 <HisyeoTabs>
-    <p>hön vos nimü tüu si wëloı pı dündon, nü pit yünyoü yök ixölö öfo pı ibüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
-    <p>hön vos noyo lı si ëo hünsüon ölë umo Keli, noyo pit niwos yök hoi küöcyo Elvu pı ibüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
-    <p>hön vos nü lı umo güexo pı ılik, nü pit tüu si yök nı mıslı ulyö.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
+    <p>hön fos nimü tüu si wëloı bı dündon, nü bit yünyoü yök ixölö öfo bı ibüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hön fos noyo lı si ëo hünsüon ölë umo Keli, noyo bit niwos yök hoi küöcyo Elvu bı ibüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
+    <p>hön fos nü lı umo güexo bı ılik, nü bit tüu si yök nı mıslı ulyö.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
 </HisyeoTabs>
 
 :::
@@ -188,7 +188,7 @@ rectify the state of things.
     <p>noyo küu lı yöüli müt nimü.&emsp;<em>I ought to help you.</em></p>
     <p>nü küu lı lö ze.&emsp;<em>Let's go!</em></p>
     <p>küu gomi oksün ulyö.&emsp;<em>Don't take that meat.</em></p>
-    <p>ü yüpik noyo küu lı gö ofek nimü lötven.&emsp;<em>May my love be with you.</em></p>
+    <p>ü yübik noyo küu lı gö ofek nimü lötfen.&emsp;<em>May my love be with you.</em></p>
 </HisyeoTabs>
 
 
@@ -201,9 +201,9 @@ This marker (<HisyeoWord is='ke'/>) indicates what linguists call the **future
 tense**.
 
 <HisyeoTabs>
-    <p>umo Zon ke lı cok hoı pıtün öfo.&emsp;<em>John is going to leave tonight.</em></p>
+    <p>umo Zon ke lı cok hoı bıtün öfo.&emsp;<em>John is going to leave tonight.</em></p>
     <p>noyo ke golo tömös onö.&emsp;<em>I will/shall read the book</em></p>
-    <p>nü küu vohoso ulyö, nü ke tüu ko. &emsp;<em>Let us examine that, shall we?</em></p>
+    <p>nü küu fohoso ulyö, nü ke tüu ko. &emsp;<em>Let us examine that, shall we?</em></p>
     <p>kut yë umo kölmüdul ke monodo nimü hoi lono uklo.&emsp;<em>One of our salesmen will visit you tomorrow.</em></p>
 </HisyeoTabs>
 
@@ -238,9 +238,9 @@ The negatitive verb modifier (<HisyeoWord is='yök'/>) turns the verb phrase
 into the negated version of itself. In English, this is the "not" adverb.
 
 <HisyeoTabs>
-    <p>hön xe yök züyı ozüul yonlüs, noyo lı si lö pı vöhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
-    <p>nimü puswen yök xe xontün cızi.&emsp;<em>You don’t need to trouble yourself.</em></p>
-    <p>mötivö yöcno lı yök xe vunsüt.&emsp;<em>The objective is not to lose.</em></p>
+    <p>hön xe yök züyı ozüul yonlüs, noyo lı si lö bı föhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
+    <p>nimü buswen yök xe xontün cızi.&emsp;<em>You don’t need to trouble yourself.</em></p>
+    <p>mötifö yöcno lı yök xe funsüt.&emsp;<em>The objective is not to lose.</em></p>
     <p>küu tüu yök ulyö.&emsp;<em>Don't do that.</em></p>
 </HisyeoTabs>
 
@@ -253,9 +253,9 @@ separate verb for the causative version of an action.
 
 <HisyeoTabs>
     <p>noyo ölë nıwos zonwul lı ëo mötö müt xünyu.&emsp;<em>I had the barn burned down.</em></p>
-    <p>nimü ölë niün poivön ëo nonto.&emsp;<em>You're making them cry.</em></p>
-    <p>umo Zon ke wëko ëo si vecko longı hoi nıwos niün.&emsp;<em>John will have his house painted.</em></p>
-    <p>öni pëüdo vohoso ëo si dënëmëk kon cukto niün.&emsp;<em>The students get their essays checked.</em></p>
+    <p>nimü ölë niün boifön ëo nonto.&emsp;<em>You're making them cry.</em></p>
+    <p>umo Zon ke wëko ëo si fecko longı hoi nıwos niün.&emsp;<em>John will have his house painted.</em></p>
+    <p>öni bëüdo fohoso ëo si dënëmëk kon cukto niün.&emsp;<em>The students get their essays checked.</em></p>
     <p>öni cüdo yë cigilsu ölë öni diyondë ke xokülü ëo öni cigilsu.&emsp;<em>The doctor will have the nurse call the patients.</em></p>
 </HisyeoTabs>
 
